samples/_failures_safe/1761302871_77d75c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fbc7327d.c: In function ‘main’:
./samples/SAFE/__tmp_fbc7327d.c:149:25: error: missing terminating " character
  149 |         fprintf(stderr, "Error: Invalid operation choice\n
      |                         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_fbc7327d.c:149:9: error: expected expression at end of input
  149 |         fprintf(stderr, "Error: Invalid operation choice\n
      |         ^~~~~~~
./samples/SAFE/__tmp_fbc7327d.c:149:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_fbc7327d.c:149:9: error: expected declaration or statement at end of input
